embassy-executor/tests/ui/abi.stderr
error: task functions must not have an ABI qualifier
 --> tests/ui/abi.rs:6:1
  |
6 | async extern "C" fn task() {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
